--- a/frontend/templates/homepage.html
+++ b/frontend/templates/homepage.html
@@ -2,6 +2,9 @@
 {% block title %}Forms{% endblock %}
 
 {% block content %}
+
+<h1> Guitar Recommender </h1>
+
 <article>
     <form id="PageSelector", name="Page Selector">
         {% for button_name in button_list %}
