--- a/frontend/templates/base.html
+++ b/frontend/templates/base.html
@@ -10,9 +10,9 @@
     <body>
         <div id="content">{% block content %}{% endblock %}</div>
 
-        <div id="footer">
+        <!-- <div id="footer">
             Get a guitar!
-        </div>
+        </div> -->
 
     </body>
 </html>
