--- a/frontend/templates/guitar_results.html
+++ b/frontend/templates/guitar_results.html
@@ -8,8 +8,10 @@
         <h3>{{ guitars[guitar]['model'] }}</h3>
         {{ guitars[guitar]['description'] }}
 
-        <form>
-            <button>Find Similar!</button>
+        <br><br>
+
+        <form class="nothing" action="/Recommender">
+            <button>Try Again</button>
         </form>
 
     </article>
