--- a/frontend/templates/base.html
+++ b/frontend/templates/base.html
@@ -10,8 +10,8 @@
     <body>
         <div id="content">{% block content %}{% endblock %}</div>
 
-        <!-- <div id="footer">
-            Get a guitar!
+        <div class="footer">
+            <!-- <a href="/">home</a>
         </div> -->
 
     </body>
