BERT embeddings into the database.

--- a/frontend/templates/homepage.html
+++ b/frontend/templates/homepage.html
@@ -3,10 +3,12 @@
 
 {% block content %}
 
-<h1> Guitar Recommender </h1>
+<h1> Meet Your Guitar </h1>
 
 <article> 
-    Welcome to the Guitar Recommender, a final project for the 2023 Winter Quarter of MSDS 432.
+    Welcome to the <b>Meet Your Guitar</b> recommendation engine, 
+    a final project by Kevin Bodkin and Joe Solomon for the 
+    2023 Winter Quarter of MSDS 432.
 
     <br><br>
     This program contains records of thousands of guitars scraped from <a href="guitarcenter.com">Guitar Center,</a>
@@ -24,7 +26,7 @@
 
     <h2>Guitar Recommendations</h2>
 
-    Search for your dream guitar! This page allows a user to specify attributes
+    Describe for your dream guitar! This page allows a user to specify attributes
     of their guitar, then find matching instruments
 
     <br><br>
@@ -44,8 +46,7 @@
 
     <h2>Data Exploration</h2>
 
-    Explore the data and look through interesting connections through our data 
-    exploration page!
+    Explore the data and look through interesting connections!
     
     <br><br>
     <form>
