--- a/frontend/templates/explore_base.html
+++ b/frontend/templates/explore_base.html
@@ -19,22 +19,22 @@
 <body>
   
     <div class="container">
-        <h1 class="text-center py-4">Responsive Chart with Bokeh, Flask and Python</h1>
-        <div class="row mb-5">
-            <div class="col-md-6">
-                <h4 class="text-center">Scatter Plot</h4>
+        <h1 class="text-center py-4">Guitar Database Analytics</h1>
+        <div class="row">
+            <div class="col-md-12">
+                <h4 class="text-center">Number of Models per Manufacturer</h4>
                 {{ div[0] | safe }}
                 {{ script[0] | safe }}
             </div>
+        </div>
+        <div class="row mb-5">
             <div class="col-md-6">
-                <h4 class="text-center">Bar Chart</h4>
+                <h4 class="text-center">Number of Strings</h4>
                 {{ div[1] | safe }}
                 {{ script[1] | safe }}
             </div>
-        </div>
-        <div class="row">
-            <div class="col-md-12">
-                <h4 class="text-center">Line Chart</h4>
+            <div class="col-md-6">
+                <h4 class="text-center">Scale Length</h4>
                 {{ div[2] | safe }}
                 {{ script[2] | safe }}
             </div>
