--- a/frontend/templates/explore_base.html
+++ b/frontend/templates/explore_base.html
@@ -1,7 +1,6 @@
-<!DOCTYPE html>
-<html lang="en">
+{% extends "base.html" %}
   
-<head>
+{% block head %}
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
   
@@ -14,33 +13,33 @@
         crossorigin="anonymous" referrerpolicy="no-referrer"></script>
   
     <title>Bokeh Charts</title>
-</head>
+{% endblock %}
   
-<body>
-  
-    <div class="container">
-        <h1 class="text-center py-4">Guitar Database Analytics</h1>
-        <div class="row">
-            <div class="col-md-12">
-                <h4 class="text-center">Number of Models per Manufacturer</h4>
-                {{ div[0] | safe }}
-                {{ script[0] | safe }}
+{% block content %}
+        <article>
+        <div class="container">
+            <h1 class="text-center py-4">Guitar Database Analytics</h1>
+            <div class="row">
+                <div class="col-md-12">
+                    <h4 class="text-center">Number of Models per Manufacturer</h4>
+                    {{ div[0] | safe }}
+                    {{ script[0] | safe }}
+                </div>
+            </div>
+            <div class="row mb-5">
+                <div class="col-md-6">
+                    <h4 class="text-center">Number of Strings</h4>
+                    {{ div[1] | safe }}
+                    {{ script[1] | safe }}
+                </div>
+                <div class="col-md-6">
+                    <h4 class="text-center">Scale Length</h4>
+                    {{ div[2] | safe }}
+                    {{ script[2] | safe }}
+                </div>
             </div>
         </div>
-        <div class="row mb-5">
-            <div class="col-md-6">
-                <h4 class="text-center">Number of Strings</h4>
-                {{ div[1] | safe }}
-                {{ script[1] | safe }}
-            </div>
-            <div class="col-md-6">
-                <h4 class="text-center">Scale Length</h4>
-                {{ div[2] | safe }}
-                {{ script[2] | safe }}
-            </div>
-        </div>
-    </div>
+    </article>
   
-</body>
+{% endblock %}
   
-</html>
